--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </a>
                 <a href="#" class="linkedin">
                     <div class="medias">
-                        <i class="fa-brands fa-linkedin" rel="external" target="_blank"></i>Linkedin
+                        <i class="fa-brands fa-linkedin-in" rel="external" target="_blank"></i>Linkedin
                     </div>
                 </a>
             </main>
